spacing issue

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1236,7 +1236,7 @@
         line-height: 23px;
     }
     .spellon-homepage .spellon-testimonial-wrapper .tst-control-btn {
-        top: 630px;
+        top: 600px;
         right: 100px;
     }
     .spellon-homepage .spellon-testimonial-wrapper .swiper-button-next,
@@ -1389,6 +1389,9 @@
     }
     .spellon-homepage .spellon-property-management .section-title {
         padding: 0px 0px;
+    }
+    .spellon-homepage .spellon-property-management .spellon-tab-image {
+        margin-top: 40px;
     }
 }
 /* SM Small Device :550px. */
@@ -1596,9 +1599,9 @@
         margin-left: 0px;
     }
     .spellon-homepage .spellon-property-management .spellon-tab-image {
-	height: 280px;
-	width: 100%;
-}
+        height: 280px;
+        width: 100%;
+    }
 
     /* experience */
     .spellon-homepage .spellon-experience-area {
@@ -1742,8 +1745,9 @@
         height: 50px;
         width: 50px;
     }
+
     .spellon-homepage .spellon-testimonial-wrapper .slider-left .author {
-        right: -52px;
+        right: -30px;
         bottom: -40px;
     }
     .spellon-homepage .spellon-testimonial-wrapper .slider-left .author img {
